--- a/FormDataBindingapp1/src/app/app.component.html
+++ b/FormDataBindingapp1/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1>
     Welcome to Angular {{name}} {{title}}! 
   </h1>
-  <input type="test" [(ngModel)]="text_value"/>
+  <input type="text" [(ngModel)]="text_value"/>
     <br>  
   {{text_value}}
  </div>
